update genre endpoint to support filtering and pagination